--- a/content-scripts/package.json
+++ b/content-scripts/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "dev": "plasmo dev",
     "build": "plasmo build",
+    "build:rm-hash": "plasmo build && ./utils/build.sh",
     "package": "plasmo package"
   },
   "dependencies": {
@@ -12,6 +13,8 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.11.8",
+    "axios": "^1.3.2",
+    "cheerio": "1.0.0-rc.12",
     "plasmo": "0.64.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -26,5 +29,8 @@
     "typescript": "4.9.4"
   },
   "manifest": {
+    "permissions": [
+      "tabs"
+    ]
   }
 }
