--- a/content-scripts/package.json
+++ b/content-scripts/package.json
@@ -12,6 +12,7 @@
     "@emotion/cache": "^11.10.5",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.8",
     "axios": "^1.3.2",
     "cheerio": "1.0.0-rc.12",
