Add setup for reading sql course grade distributions

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -19,6 +19,10 @@
     },
     "options_page": "options.html",
     "permissions": ["storage"],
+    "web_accessible_resources": [{
+        "resources": ["content/assets/sql-wasm.wasm"],
+        "matches": ["<all_urls>"]
+    }],
     "background": {
         "service_worker": "content/background.js"
     },
