--- a/content-scripts/package.json
+++ b/content-scripts/package.json
@@ -18,7 +18,8 @@
     "cheerio": "1.0.0-rc.12",
     "plasmo": "0.64.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sql.js": "^1.8.0"
   },
   "devDependencies": {
     "@plasmohq/prettier-plugin-sort-imports": "3.6.1",
@@ -30,6 +31,10 @@
     "typescript": "4.9.4"
   },
   "manifest": {
+    "web_accessible_resources": [{
+      "resources": ["assets/sql-wasm.wasm"],
+      "matches": ["<all_urls>"]
+    }],
     "permissions": [
       "tabs"
     ]
