--- a/content-scripts/package.json
+++ b/content-scripts/package.json
@@ -17,8 +17,10 @@
     "axios": "^1.3.2",
     "cheerio": "1.0.0-rc.12",
     "plasmo": "0.64.5",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "recharts": "^2.4.3",
     "sql.js": "^1.8.0"
   },
   "devDependencies": {
@@ -31,10 +33,16 @@
     "typescript": "4.9.4"
   },
   "manifest": {
-    "web_accessible_resources": [{
-      "resources": ["assets/sql-wasm.wasm"],
-      "matches": ["<all_urls>"]
-    }],
+    "web_accessible_resources": [
+      {
+        "resources": [
+          "assets/sql-wasm.wasm"
+        ],
+        "matches": [
+          "<all_urls>"
+        ]
+      }
+    ],
     "permissions": [
       "tabs"
     ]
